--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "dashgo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.18",
-    "@types/react": "17.0.39",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.5.5"
-  }
+	"name": "dashgo",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@chakra-ui/core": "^0.8.0",
+		"@chakra-ui/react": "^1.8.3",
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
+		"framer-motion": "^6.2.6",
+		"next": "12.1.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.18",
+		"@types/react": "17.0.39",
+		"eslint": "8.9.0",
+		"eslint-config-next": "12.1.0",
+		"typescript": "4.5.5"
+	}
 }
