--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
 		"react-dom": "17.0.2",
 		"react-hook-form": "^7.27.1",
 		"react-icons": "^4.3.1",
+		"react-query": "^3.34.16",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^6.0.0-alpha.7",
 		"@types/node": "17.0.18",
 		"@types/react": "17.0.39",
 		"eslint": "8.9.0",
 		"eslint-config-next": "12.1.0",
+		"miragejs": "^0.1.43",
 		"typescript": "4.5.5"
 	}
 }
